<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_2sdp"
    android:layout_margin="@dimen/_5sdp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:id="@+id/AyahNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AyahArabic"
            android:layout_width="0dp"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"
            android:fontFamily="@font/al_qalam"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AyahNumber" />

        <TextView
            android:id="@+id/JuzOfAyah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/juz_30"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AyahArabic" />

        <TextView
            android:id="@+id/AyahManzil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/manzil_17"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/JuzOfAyah"
            app:layout_constraintStart_toEndOf="@+id/JuzOfAyah"
            app:layout_constraintTop_toTopOf="@+id/JuzOfAyah" />

        <TextView
            android:id="@+id/AyahRuku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ruku_550"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/AyahManzil"
            app:layout_constraintStart_toEndOf="@+id/AyahManzil"
            app:layout_constraintTop_toTopOf="@+id/AyahManzil" />

        <TextView
            android:id="@+id/AyahSajda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sajda_true"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/AyahRuku"
            app:layout_constraintStart_toEndOf="@+id/AyahRuku"
            app:layout_constraintTop_toTopOf="@+id/AyahRuku" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>